--- a/tests/.github/workflows/cypress.yml
+++ b/tests/.github/workflows/cypress.yml
@@ -1,40 +1,77 @@
-name: Run Cypress Tests
+name: Cypress Tests
 
 on:
   push:
-    branches: [main, working-test]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [main, working-test]
+    branches:
+      - main
+      - develop
 
 jobs:
-  ui-tests:
+  tests:
     runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
 
+    steps:
+      - uses: actions/checkout@v4
+
+      # Step 1: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
+      # Step 2: Install dependencies
       - name: Install dependencies
         run: |
           npm ci
+          # Install Cypress and any other dependencies for your tests
+          npx cypress install
 
+      # Step 3: Set up Allure Report
+      - name: Set up Allure commandline
+        run: npm install -g allure-commandline
+
+      # Step 4: Run Cypress tests (both UI and API)
       - name: Run Cypress tests
         run: |
-          npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }} || true
-        env:
-          CYPRESS_BASE_URL: https://your-website-url.com # Set this to the base URL of your app
+          npx cypress run --reporter mocha-allure-reporter
 
-      - name: Upload Cypress Test Results
+      # Step 5: Upload the test results
+      - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: ui-test-results
+          name: cypress-test-results
           path: |
-            cypress/results/
-            cypress/videos/
-            cypress/screenshots/
+            cypress/results/allure-report/
+            cypress/results/*.json
+
+  generate-report:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      # Step 1: Download test results
+      - name: Download test results
+        uses: actions/download-artifact@v3
+        with:
+          name: cypress-test-results
+          path: results
+
+      # Step 2: Generate combined Allure report
+      - name: Generate Allure Report
+        run: |
+          allure generate results/cypress-test-results -o results/allure-report --clean
+
+      # Step 3: Upload combined report
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: results/allure-report
+          retention-days: 30
