--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,28 +18,27 @@ jobs:
       # Step 1: Check out the repository
       - uses: actions/checkout@v4
 
-      # Step 2: Set up Node.js in the 'tests' directory
+      # Step 2: Set up Node.js in the root directory
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-        working-directory: ./tests  # Ensure the setup-node is done in the 'tests' folder
 
-      # Step 3: Install dependencies
+      # Step 3: Install dependencies (with `cd` into the tests directory)
       - name: Install dependencies
-        working-directory: ./tests  # Ensure we're in the 'tests' folder
+        working-directory: ./tests  # Switch to the 'tests' directory
         run: |
           npm ci  # Install dependencies from 'tests/package-lock.json'
           npx cypress install  # Install Cypress if not already installed
 
-      # Step 4: Set up Allure commandline in the 'tests' folder
+      # Step 4: Set up Allure commandline
       - name: Set up Allure commandline
-        working-directory: ./tests  # Ensure we are in the 'tests' folder
+        working-directory: ./tests  # Switch to the 'tests' directory
         run: npm install -g allure-commandline
 
       # Step 5: Run Cypress tests
       - name: Run Cypress tests
-        working-directory: ./tests  # Ensure we are in the 'tests' folder
+        working-directory: ./tests  # Switch to the 'tests' directory
         run: |
           npx cypress run --reporter mocha-allure-reporter
 
