--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run Cypress tests
         working-directory: ./tests  # Switch to the 'tests' directory
         run: |
-          npx cypress run --reporter mocha-allure-reporter
+          npx cypress run
 
       # Step 6: Upload test results
       - name: Upload test results
